# speedtester-rs

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.client  Dockerfile.server  build.rs  deploy.sh  fly.toml  local-deploy.sh  speedtester-rs.service  sqlx-data.json
.cargo/: config.toml
.devcontainer/: .env.sample  Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/iperf_server/: Dockerfile
.github/workflows/: CD.yml  CI.yml  CI_CD.yml  check.yml  deploy.yml  dev.yml
.sqlx/: query-918c8a8de99ea1b0a5b102473ac421c39a61710174bfa88e0184056e6d1659ee.json  query-c22ed86eb38aff41f24512f8dc8deeaed2a44ed0ccd83da5dc7e53b7827e90f3.json
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/iperf3-cli/: Cargo.toml
crates/iperf3-cli/src/: lib.rs  reports.rs
crates/server/: Cargo.toml  Dockerfile
crates/server/src/: main.rs
crates/server/src/transport_tests/: mod.rs  packet_loss.rs
iperf3/: Cargo.toml  bindings.rs  build.rs  gen_bindings.sh
iperf3/src/: iperf_bindings.rs  lib.rs
migrations/: 20220926145440_initial.sql
speedtester-client/: Cargo.toml
speedtester-client/src/: main.rs
speedtester-server/: Cargo.toml  sqlx-data.json
speedtester-server/migrations/: 20220923023539_initial.sql  20220926145440_initial.sql  20221201045922_uniquetoken.sql
speedtester-server/src/: lib.rs  main.rs
src/: api.rs  iperf.rs  iperf_bindings.rs  iperf_reports.rs  lib.rs  main.rs
src/iperf3/: mod.rs
tests/: end-to-end.rs
