[package]
name = "speedtester-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.5", features = [
    "env",
    "unicode",
    "derive",
    "wrap_help",
] }
color-eyre = "0.6.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }

[build-dependencies]
autotools = "0.2.5"
bindgen = "0.59.2"
color-eyre = "0.6.1"

[features]
