[package]
name = "speedtester-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.1.5", features = [
    "env",
    "unicode",
    "derive",
    "wrap_help",
] }
color-eyre = "0.6.1"
dotenv = "0.15.0"

# May help libiperf find SSL, although not sure if this does anything significant
openssl-sys = "0.9.72"
postgres = { version = "0.19.2", features = ["with-serde_json-1"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }

[build-dependencies]
autotools = "0.2.5"
bindgen = "0.59.2"
color-eyre = "0.6.1"

[features]
