[package]
name = "iperf3"
description = "iperf types (and eventually implementation)"
version = "0.1.0"
edition = "2021"

[package.metadata.system-deps]
openssl = "*"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
autotools = "0.2.5"
libc = "0.2.134"

[build-dependencies]
autotools = "0.2.5"
system-deps = "6.0"
bindgen = "*"
