[package]
name = "iperf3"
description = "iperf types (and eventually implementation)"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
libc = "0.2.134"

[build-dependencies]
pkg-config = "0.3.25"
autotools = "0.2.5"
openssl-src = { version = "300.0.9", optional = true }
iperf3-src = { git = "https://github.com/derekw023/iperf3-src", optional = true }


[features]
allow_vendoring = ["dep:openssl-src", "dep:iperf3-src"]
