[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
color-eyre = "0.6.1"

reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
uuid = { version = "1.1.2", features = ["serde", "v4"] }

iperf3-cli = { path = "../iperf3-cli" }
api =   { path = "../api" }
tokio = {version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = {version="0.3.17", features = ["env-filter"] }
toml = "0.7.3"


