[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.*"
axum-macros = "0.3.*"
clap = { version = "4.4.*", features = [
    "env",
    "unicode",
    "derive",
    "wrap_help",
    "deprecated",
] }
color-eyre = "0.6.1"

sqlx = { version = "0.7.*", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "uuid",
] }
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.*", features = ["full"] }
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["serde"] }
iperf3-cli = { path = "../iperf3-cli" }
api =   { path = "../api" }
dotenvy = "0.15.7"